--- a/api_map.html
+++ b/api_map.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <ul>
-      <li><a href="main.html">Home</a></li>
+      <li><a href="index.html">Home</a></li>
       <li><a href="api_map.html">Map</a></li>
       <li><a href="myAPI_table.html">Table (every State)</a></li>
       <li><a href="api.html">Table (every hour)</a></li>
