--- a/myAPI_table.html
+++ b/myAPI_table.html
@@ -12,7 +12,7 @@
   
     <body>
       <ul>
-        <li><a href="main.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="api_map.html">Map</a></li>
         <li><a href="myAPI_table.html">Table (every State)</a></li>
         <li><a href="api.html">Table (every hour)</a></li>
