--- a/api.html
+++ b/api.html
@@ -32,7 +32,7 @@
       ></iframe>
     </div>
 
-    <a href="http://apims.doe.gov.my/api_table.html" style="padding-left: 50px;">Source: Air Pollutant Index of Malaysia (APIMS)</a>
+    <a href="https://apims.doe.gov.my/api_table.html" style="padding-left: 50px;">Source: Air Pollutant Index of Malaysia (APIMS)</a>
 
     </body>
 </html>
