--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <li><a href="api_map.html">Map</a></li>
         <li><a href="myAPI_table.html">Table (every State)</a></li>
         <li><a href="api.html">Table (every hour)</a></li>
-        <li><a href="api_info.html">Information</a></li>
+        <li><a href="api_info.html">Information(What to do)</a></li>
       </ul>
   
       <h1>Air Quality Index <br>Malaysia Live Stats</h1>
