--- a/myAPI_table.html
+++ b/myAPI_table.html
@@ -27,7 +27,7 @@
       <script type="text/javascript" charset="utf-8">
 
       var cities = ['johor','malacca','seremban','selangor','kuala lumpur','ipoh','penang','kulim','alor setar',
-                    'langkawi','perlis','tanah merah','paka','temerloh','kuching','kota kinabalu','labuan'];
+                    'langkawi','perlis','tanah merah','paka','temerloh','kuching','kota kinabalu','labuan','putrajaya'];
 
       displayAirQuality(cities);
 
